Fix teacher list grid on mobile

--- a/source/stylesheets/components/_card.sass
+++ b/source/stylesheets/components/_card.sass
@@ -16,11 +16,6 @@
     padding-top: 0
     text-align: center
 
-  &--list
-    float: right
-    margin-top: 20px
-    width: calc(100% - 35px)
-
   &--with-content
     padding: 30px
 
@@ -33,7 +28,6 @@
 
     &--teacher
       float: none
-      margin-top: calc(35px + 20px)
       padding-left: 0
       width: 100%
 
